Test fix overflow in mobile view

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import "variables.scss";
 
-html {
+html,
+body,
+#root {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
